Bug 483730 - On Wayland, Upper Case Characters Converted to Lower Case in KDE Connect "Remote Input" Compose
Summary: On Wayland, Upper Case Characters Converted to Lower Case in KDE Connect "Rem...
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: common (other bugs)
Version First Reported In: 24.02.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords: qt6, wayland-only
: 488548 (view as bug list)
Depends on:
Blocks:
 
Reported: 2024-03-16 08:04 UTC by nazDridoy
Modified: 2025-09-23 17:08 UTC (History)
9 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 25.08.2
Sentry Crash Report:


Attachments
Upper Case Characters Converted to Lower Case in KDE Connect (127.91 KB, image/jpeg)
2024-03-16 08:04 UTC, nazDridoy
Details

Note You need to log in before you can comment on or make changes to this bug.
Description nazDridoy 2024-03-16 08:04:19 UTC
Created attachment 167303 [details]
Upper Case Characters Converted to Lower Case in KDE Connect

SUMMARY
***
In the latest version of KDE Connect (v24.02.0, APK v1.29.0), there is an issue with the "Remote Input" , specifically with the "Compose" functionality. When attempting to send text to my PC using "Remote Input" and "Compose," all uppercase characters are automatically converted into lowercase characters. This occurs consistently, regardless of the text input method used. Interestingly, typing out text using the on-screen keyboard works just fine.
***

STEPS TO REPRODUCE
1. Ensure both the PC and mobile device are connected via KDE Connect.
2. Open the KDE Connect app on the mobile device.
3. Select the "Remote Input" feature.
4. Use the "Compose" functionality to input text containing uppercase characters.
5. Observe that all uppercase characters are converted to lowercase automatically.

Expected Behavior:
When using the "Compose"  in "Remote Input," uppercase characters should remain unchanged and be transmitted accurately to the PC.

Actual Behavior:
All uppercase characters are converted to lowercase when using the "Compose" feature in "Remote Input," resulting in incorrect text transmission to the PC.


SOFTWARE/OS VERSIONS
Linux: Archlinux
KDE Plasma Version: 6.0.2 (wayland)
KDE Frameworks Version: 6.0.0
Qt Version: 6.6.2

ADDITIONAL INFORMATION
This issue is consistent across different devices and keyboard input methods. It significantly impacts the usability of the "Remote Input" feature, particularly for tasks requiring the accurate transmission of text with uppercase characters.
Comment 1 1346innocent 2024-05-07 15:15:59 UTC
Bump!

please address this issue. I can not use kdeconnect because of this.
Comment 2 cwo 2024-08-03 08:26:12 UTC
*** Bug 488548 has been marked as a duplicate of this bug. ***
Comment 3 cwo 2024-08-03 08:28:24 UTC
I can confirm this on Wayland - with both Gboard and Samsung Keyboard, the input sent via Compose send is converted to lower case; this does not happen on X11. Moving to general as the issue seems to be on the desktop side.

If you experience this bug on X11 (with compose send, not with directly sending keyboard inputs), please mention this as a comment.

duplicate bug 488548 mentions a line in waylandremoteinput.cpp that may be related.
Comment 4 Daniele Verducci 2024-12-14 08:56:23 UTC
I also can confirm this. I'm using:
To send: Android 14 with FlorisBoard keyboard and KDE Connect 1.32.9
To receive: Arch Linux (kernel 6.12.3-arch1-1) with Plasma Mobile 6.2.4 (KDE Frameworks 6.8.0, QT 6.8.1) and KDE Connect 24.08.3
Comment 5 Nicolas Fella 2025-09-23 17:06:44 UTC
Git commit 0d2caec23c0d41836ba98a1dadb8069685ad968f by Nicolas Fella, on behalf of Lyra Rebane.
Committed on 23/09/2025 at 17:06.
Pushed by nicolasfella into branch 'master'.

[plugins/mousepad] Allow uppercase keysyms for portal input

Currently all keyboard input is converted to lowercase. Combined with the shift key this can still produce an uppercase key, but that doesn't seem to happen for everyone.

See https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1111516
Related: bug 489524, bug 499121

M  +1    -1    plugins/mousepad/waylandremoteinput.cpp

https://invent.kde.org/network/kdeconnect-kde/-/commit/0d2caec23c0d41836ba98a1dadb8069685ad968f
Comment 6 Nicolas Fella 2025-09-23 17:08:31 UTC
Git commit e1ee9eae453f366250cfb6f552e19ebc094c4803 by Nicolas Fella, on behalf of Lyra Rebane.
Committed on 23/09/2025 at 17:08.
Pushed by nicolasfella into branch 'release/25.08'.

[plugins/mousepad] Allow uppercase keysyms for portal input

Currently all keyboard input is converted to lowercase. Combined with the shift key this can still produce an uppercase key, but that doesn't seem to happen for everyone.

See https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1111516
Related: bug 489524, bug 499121
(cherry picked from commit 0d2caec23c0d41836ba98a1dadb8069685ad968f)

M  +1    -1    plugins/mousepad/waylandremoteinput.cpp

https://invent.kde.org/network/kdeconnect-kde/-/commit/e1ee9eae453f366250cfb6f552e19ebc094c4803