[plugins/mousepad] Allow uppercase keysyms for portal input

Currently all keyboard input is converted to lowercase. Combined with the shift key this can still produce an uppercase key, but that doesn't seem to happen for everyone.

See https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1111516

BUG: 483730
BUG: 489524
BUG: 499121
(cherry picked from commit 0d2caec23c0d41836ba98a1dadb8069685ad968f)